[tool.poetry]
name = "wedding-"
version = "0.1.0"
description = ""
authors = ["Сергей <sergey.vasilev.98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.35.0"
fastapi = "^0.115.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
